[package]
name = "rsrepo"
version = "0.2.0-dev"
edition = "2021"
description = "Rust project templater & releaser"
authors = ["John Thorvald Wodder II <rsrepo@varonathe.org>"]
repository = "https://github.com/jwodder/rsrepo"
documentation = "https://github.com/jwodder/rsrepo"
keywords = ["cargo", "template-project"]
license = "MIT"
exclude = ["/.*"]
publish = false

[dependencies]
anstream = "0.6.4"
anstyle = "1.0.4"
anyhow = "1.0.75"
cargo_metadata = "0.18.1"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.4.8", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
fern = "0.6.2"
fs-err = "2.10.0"
gh-token = "0.1.5"
ghrepo = { version = "0.5.0", default-features = false }
home = "0.5.5"
in-place = "0.1.0"
include_dir = "0.7.3"
indenter = "0.3.3"
itertools = "0.12.0"
log = "0.4.20"
mime = "0.3.17"
nom = "7.1.3"
once_cell = "1.18.0"
rangemap = "1.4.0"
renamore = "0.3.2"
semver = "1.0.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
shell-words = "1.1.0"
tempfile = "3.8.1"
thiserror = "1.0.50"
tinytemplate = "1.2.1"
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
toml_edit = "0.21.0"
ureq = { version = "2.9.0", features = ["json"] }
url = "2.4.1"
which = "5.0.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = { version = "3.0.4", default-features = false }
rstest = { version = "0.18.2", default-features = false }
similar = "2.3.0"
tempfile = "3.8.1"

[build-dependencies]
anyhow = "1.0.75"

[profile.release]
lto = true
strip = true

[lints.rust]
#warn = "deny" (all = "deny"?)
unsafe_code = "deny"
trivial_casts = "deny"
explicit_outlives_requirements = "deny"
macro_use_extern_crate = "deny"
missing_debug_implementations = "deny"
pointer_structural_match = "deny"
single_use_lifetimes = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_tuple_struct_fields = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[lints.clippy]
#warn = "deny" (all = "deny"?)
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
checked_conversions = "deny"
clear_with_drain = "deny"
cloned_instead_of_copied = "deny"
collection_is_never_read = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
doc_link_with_quotes = "deny"
empty_line_after_doc_comments = "deny"
empty_line_after_outer_attr = "deny"
empty_structs_with_brackets = "deny"
equatable_if_let = "deny"
exit = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
future_not_send = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
ignored_unit_patterns = "deny"
impl_trait_in_params = "deny"
implicit_clone = "deny"
implied_bounds_in_impls = "deny"
imprecise_flops = "deny"
invalid_upcast_comparisons = "deny"
items_after_statements = "deny"
iter_not_returning_iterator = "deny"
iter_with_drain = "deny"
linkedlist = "deny"
lossy_float_literal = "deny"
manual_assert = "deny"
manual_clamp = "deny"
manual_instant_elapsed = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
match_bool = "deny"
match_same_arms = "deny"
mem_forget = "deny"
mismatching_type_param_order = "deny"
missing_safety_doc = "deny"
mut_mut = "deny"
needless_bitwise_bool = "deny"
needless_collect = "deny"
needless_for_each = "deny"
needless_pass_by_ref_mut = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
negative_feature_names = "deny"
or_fun_call = "deny"
path_buf_push_overwrite = "deny"
pub_without_shorthand = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
read_zero_byte_vec = "deny"
readonly_write_lock = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
redundant_feature_names = "deny"
ref_binding_to_reference = "deny"
same_functions_in_if_condition = "deny"
semicolon_if_nothing_returned = "deny"
should_panic_without_expect = "deny"
single_match_else = "deny"
stable_sort_primitive = "deny"
string_add_assign = "deny"
string_lit_as_bytes = "deny"
string_lit_chars_any = "deny"
string_to_string = "deny"
suboptimal_flops = "deny"
tests_outside_test_module = "deny"
trailing_empty_array = "deny"
trait_duplication_in_bounds = "deny"
trivial_regex = "deny"
try_err = "deny"
type_repetition_in_bounds = "deny"
unchecked_duration_subtraction = "deny"
undocumented_unsafe_blocks = "deny"
unicode_not_nfc = "deny"
uninlined_format_args = "deny"
unnecessary_join = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unnecessary_struct_initialization = "deny"
unnecessary_wraps = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"
unused_peekable = "deny"
unused_rounding = "deny"
unwrap_used = "deny"
used_underscore_binding = "deny"
wildcard_dependencies = "deny"
zero_sized_map_values = "deny"
