[package]
name = "rsrepo"
version = "0.2.0-dev"
edition = "2021"
description = "Rust project templater & releaser"
authors = ["John Thorvald Wodder II <rsrepo@varonathe.org>"]
repository = "https://github.com/jwodder/rsrepo"
documentation = "https://github.com/jwodder/rsrepo"
keywords = ["cargo", "template-project"]
license = "MIT"
exclude = ["/.*"]
publish = false

[dependencies]
anstream = "0.6.4"
anstyle = "1.0.4"
anyhow = "1.0.75"
cargo_metadata = "0.18.1"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.4.8", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
fern = "0.6.2"
fs-err = "2.10.0"
gh-token = "0.1.5"
ghrepo = { version = "0.5.0", default-features = false }
home = "0.5.5"
in-place = "0.1.0"
include_dir = "0.7.3"
indenter = "0.3.3"
itertools = "0.12.0"
log = "0.4.20"
mime = "0.3.17"
nom = "7.1.3"
once_cell = "1.18.0"
rangemap = "1.4.0"
renamore = "0.3.2"
semver = "1.0.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
shell-words = "1.1.0"
tempfile = "3.8.1"
thiserror = "1.0.50"
tinytemplate = "1.2.1"
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
toml_edit = "0.21.0"
ureq = { version = "2.8.0", features = ["json"] }
url = "2.4.1"
which = "5.0.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = { version = "3.0.4", default-features = false }
rstest = { version = "0.18.2", default-features = false }
similar = "2.3.0"
tempfile = "3.8.1"

[profile.release]
lto = true
strip = true

[build-dependencies]
anyhow = "1.0.75"
